<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/drawer_profile"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_profile"/>
    <item
            android:id="@+id/drawer_recipes"
            android:icon="@drawable/ic_recipes"
            android:title="@string/menu_recipes"/>
    <item
            android:id="@+id/drawer_user_ingredients"
            android:icon="@drawable/ic_user_ingredients"
            android:title="@string/menu_user_ingredients"/>
    <item
            android:id="@+id/drawer_all_ingredients"
            android:icon="@drawable/ic_all_ingredients"
            android:title="@string/menu_all_ingredients"/>
    <item
            android:id="@+id/drawer_shopping_list"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_shopping_list"/>
    <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout"/>

</menu>