<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".RecipeDetailActivity" android:background="@color/colorPrimaryDark">
        <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp" app:srcCompat="@drawable/ic_recipe_yellow"
                android:id="@+id/recipeIcon"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="Recipe Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/lblRecipeName" app:layout_constraintStart_toEndOf="@+id/recipeIcon"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textColor="@color/white" android:textSize="24sp"
                android:fontFamily="@font/work_sans_medium"/>
        <TextView
                android:text="Category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/lblRecipeCategory" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/lblRecipeName"
                app:layout_constraintStart_toEndOf="@+id/recipeIcon" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:textColor="@color/colorAccent" android:fontFamily="@font/work_sans"/>
        <Button
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnLikes" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/recipeIcon"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toStartOf="@+id/btnComments"
                android:background="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.TextButton" app:icon="@drawable/ic_like"
                android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorAccent" app:layout_constraintBottom_toTopOf="@+id/recipeTabs"
                android:layout_marginBottom="8dp"/>
        <Button
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnComments" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lblRecipeCategory"
                android:drawableLeft="@drawable/ic_comments" android:background="@android:color/transparent"
                style="@style/Widget.MaterialComponents.Button.TextButton" app:icon="@drawable/ic_comments"
                app:layout_constraintStart_toEndOf="@+id/btnLikes" android:textColor="@color/colorAccent"
                android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipeTabs"/>
        <com.google.android.material.tabs.TabLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/btnLikes"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:tabIndicatorColor="@color/colorAccent" app:tabTextColor="@color/colorAccent"
                app:tabIconTint="@color/colorAccent" android:background="@color/colorPrimaryDark"
                android:id="@+id/recipeTabs" app:tabMode="fixed" app:tabRippleColor="@color/colorAccent">

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabs_ingredients" android:icon="@drawable/ic_user_ingredients"
                    android:id="@+id/tabIngredients" android:tag="IngredientsTabb"/>

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabs_instructions" android:icon="@drawable/ic_steps"
                    android:id="@+id/tabInstructions" android:tag="InstructionsTab"/>

            <com.google.android.material.tabs.TabItem
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tabs_comments" android:icon="@drawable/ic_comments"
                    android:id="@+id/tabComments" android:tag="CommentsTab"/>
        </com.google.android.material.tabs.TabLayout>
        <ListView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/lvItems"
                app:layout_constraintTop_toBottomOf="@+id/recipeTabs" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:visibility="visible"
                tools:listitem="@layout/ingredient_list_item">
        </ListView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar android:layout_width="60dp" android:layout_height="60dp" android:layout_gravity="center" android:visibility="gone" android:id="@+id/recipeLoad"/>

    <com.google.android.material.bottomappbar.BottomAppBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
            android:layout_gravity="bottom"
            app:fabAlignmentMode="end"
            app:navigationIcon="@drawable/ic_menu"
            android:id="@+id/toolbar"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_like_white"
            app:layout_anchor="@id/toolbar" app:backgroundTint="@color/colorAccent"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>